--- a/more.tex
+++ b/more.tex
@@ -1953,6 +1953,33 @@ http://www.pythonlearn.com/
 \end{verbatim}
 \afterverb
 %
+\section{Glossary}
+
+\begin{description}
+
+\item[port:] A number that generally indicates which application 
+you are contacting when you make a socket connection to a server.
+As an example, web traffic usually uses port 80 while e-mail 
+traffic uses port 50.
+\index{port}
+
+\item[scrape:] When a program pretends to be a web browser and
+retrives a web page and then lokas at the web page content. 
+Often programs are following the links in one page to find the next
+page so they can traverse a network of pages or a social network.
+\index{socket}
+
+\item[socket:] A network connection between two applications
+where the appcliations can send and receive data in either direction.
+\index{socket}
+
+\item[spider:] The act of a web search engine retrieving a page and
+then all the pages linked from a page and so on until they have 
+nealry all of the pages on the Internet which they 
+use to build their search index.
+\index{spider}
+
+\end{description}
 
 \section{Exercises}
 
